Admin panel message controller and User Details Message controller were fixed